java 21 support fix