@@ -241,6 +241,7 @@
           <configuration>
             <argLine>
               --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+              --add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
               --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
               --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
             </argLine>
